ProdIND/ProdPrograms/force-app/main/default/objects/Viability_of_Existing_Proposed_Tractor__c/Viability_of_Existing_Proposed_Tractor__c.object-meta.xml
<CustomObject>
    <label>Viability of Existing-Proposed Tractor</label>
    <nameField>
        <displayFormat>VEPT-{0000}</displayFormat>
        <label>Viability Sr. No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Viability of Existing-Proposed Tractors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>