ProdIND/ProdPrograms/force-app/main/default/objects/Viability_of_Existing_Proposed_Tractor__c/fields/Diesal_counsumption_hr__c.field-meta.xml
<CustomField>
    <fullName>Diesal_counsumption_hr__c</fullName>
    <defaultValue>3.5</defaultValue>
    <label>Diesal counsumption/hr</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>