ProdIND/ProdPrograms/force-app/main/default/objects/Viability_of_Existing_Proposed_Tractor__c/fields/Diesal_Rate_Hr__c.field-meta.xml
<CustomField>
    <fullName>Diesal_Rate_Hr__c</fullName>
    <defaultValue>88</defaultValue>
    <label>Diesal Rate/Hr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>