ProdIND/ProdPrograms/force-app/main/default/objects/Viability_of_Existing_Proposed_Tractor__c/fields/Existing_Proposed__c.field-meta.xml
<CustomField>
    <fullName>Existing_Proposed__c</fullName>
    <label>Existing /Proposed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Proposed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>