ProdIND/ProdPrograms/force-app/main/default/objects/Viability_of_Existing_Proposed_Tractor__c/fields/Expenses__c.field-meta.xml
<CustomField>
    <fullName>Expenses__c</fullName>
    <label>Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>