ProdIND/ProdPrograms/force-app/main/default/objects/Viability_of_Existing_Proposed_Tractor__c/fields/Field_Investigation__c.field-meta.xml
<CustomField>
    <fullName>Field_Investigation__c</fullName>
    <label>Field Investigation</label>
    <referenceTo>Field_Investigation__c</referenceTo>
    <relationshipLabel>Viability of Existing-Proposed Tractors</relationshipLabel>
    <relationshipName>Viability_of_Existing_Proposed_Tractors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>