ProdIND/ProdPrograms/force-app/main/default/objects/Viability_of_Existing_Proposed_Tractor__c/fields/Nos_of_Hours_run_in_year__c.field-meta.xml
<CustomField>
    <fullName>Nos_of_Hours_run_in_year__c</fullName>
    <label>Nos. of Hours run in year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>