ProdIND/ProdPrograms/force-app/main/default/objects/Viability_of_Existing_Proposed_Tractor__c/fields/Per_Hour_Rate__c.field-meta.xml
<CustomField>
    <fullName>Per_Hour_Rate__c</fullName>
    <defaultValue>500</defaultValue>
    <label>Per Hour Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>