ProdIND/ProdPrograms/force-app/main/default/objects/Viability_of_Existing_Proposed_Tractor__c/fields/Total_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Income__c</fullName>
    <label>Total Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>