ProdIND/ProdPrograms/force-app/main/default/objects/Viability_of_Existing_Proposed_Tractor__c/fields/Tractor_Harvester__c.field-meta.xml
<CustomField>
    <fullName>Tractor_Harvester__c</fullName>
    <label>Tractor/Harvester</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tractor</fullName>
            </value>
            <value>
                <fullName>Harvester</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>